2008-08-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/common/registry.py:
	  Write out the registry with _description tags.
	* flumotion/test/test_registry.py:
	  Update tests for new _description attribute.

2008-07-31  Johan Dahlin  <johan@flumotion.com>

	* *.py:
	Replace ",)" with ", )", according to PEP-8,
	removes a couple of 100 warnings spotted by
	pep8.py

2008-07-31  Johan Dahlin  <johan@flumotion.com>

	* data/glade/httpstreamer-wizard.glade:
	The mount point entry on the streamer page should be wider.
	Fixes #1102.

2008-07-31  Johan Dahlin  <johan@flumotion.com>

	* flumotion/component/producers/videotest/wizard.glade:
	* flumotion/component/producers/videotest/wizard_gtk.py:
	* flumotion/test/test_wizard_save.py:
	Remove YUV/RGB combo from video test src page in the wizard
	Fixes #1091.

2008-07-31  Johan Dahlin  <johan@flumotion.com>

	* data/glade/sectionwizard.glade:
	* flumotion/ui/wizard.py:
	Add a finish button, and always show and make it
	sensitive iff it wizard can be finished.

2008-07-31  Johan Dahlin  <johan@flumotion.com>

	* data/Makefile.am:
	* data/image/Makefile.am:
	* flumotion/admin/gtk/dialogs.py:
	* flumotion/ui/icons.py:
	* flumotion/ui/simplewizard.py:
	* flumotion/ui/trayicon.py:
	* flumotion/ui/wizard.py:
	Update the icons, use the flumotion icon everywhere.

2008-07-31  Thomas Vander Stichele  <thomas at apestaart dot org>

	* Makefile.am:
	  pychecker more.
	* flumotion/monitor/nagios/process.py:
	  Fix a pychecker complaint.

2008-07-31  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/common/registry.py:
	  Also handle _description for compound-property.
	* flumotion/component/bouncers/bouncer.xml:
	* flumotion/component/bouncers/htpasswdcrypt.xml:
	* flumotion/component/bouncers/icalbouncer.xml:
	* flumotion/component/bouncers/ipbouncer.xml:
	* flumotion/component/bouncers/saltsha256.xml:
	* flumotion/component/bouncers/tokentest.xml: