@@ -16,5 +16,6 @@ EXTRA_DIST = \
 	setup.m4		\
 	trial.mk		\
 	twisted-module.m4	\
+	validate-config.py	\
 	validate-registry.py	\
 	gen-locale-xml.py
