@@ -5,6 +5,10 @@ import sys
 
 from flumotion.manager import manager
 
+from flumotion.common import setup
+setup.setup()
+setup.setupPackagePath()
+
 vishnu = manager.Vishnu('validate')
 
 vishnu.loadManagerConfigurationXML(sys.argv[1])
